<resources>
    <string name="app_name">TeloLlevo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="facebook_app_id">161817891276171</string>
    <string name="fb_login_protocol_scheme">fb161817891276171</string>
    <string name="full_name">Usuario</string>
    <string name="password_inpt">Contraseña</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="social_info">Tambien puedes iniciar sesión con redes sociales</string>
    <string name="userempty">Por favor introduce un nombre valido</string>
    <string name="passwrdempty">Por favor introduce una contraseña</string>

    <string name="load_success">Cargado</string>
    <string name="weready">¡Estamos listos!</string>
    <string name="loading">Cargando…</string>
    <string name="wait_loading">Espera un momento por favor</string>
    <string name="title_error">Ups</string>
    <string name="info_error">Algo ocurrió, intenta de nuevo</string>
    <string name="email_input">Email</string>
    <string name="dir_input">Dirección</string>
    <string name="password_inpt_2">Confirmar contraseña</string>
    <string name="confirm_notequ">Las contraseñas no coinciden</string>
    <string name="invalid_email">El email es inválido</string>
    <string name="dir_empty">La dirección no puede estar vacía</string>
    <string name="phone_empty">Telefono inválido</string>
    <string name="register_btn">Registrarme</string>
    <string name="register_info">No estás registrado? Pulsa aquí</string>
    <string name="phone_inpt">Telefono</string>
    <string name="title_cat">categoria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_category">Categorias</string>
    <string name="filters_cat">Filtros</string>
    <string name="for_you">Inicio</string>
    <string name="offers">Promociones</string>
    <string name="shopping_cart">Carrito</string>
    <string name="profile_user">Perfil</string>
    <string name="title_bus_example">China Airlines</string>
    <string name="dir_bussines">Calle 63, #35 - 67 sur</string>
    <string name="rating_example">4/5</string>
    <string name="desc_buss">es una cadena de restaurantes de comida rápida especializada en pollo frito, que pertenece al grupo Yum! Brands. Cuenta con más de 18 000 restaurantes en 120 países y se encuentra en la segunda posición a nivel de negocios, por detrás de McDonald\'s.</string>
    <string name="load_error">Ups, ocurrio un problema intenta de nuevo</string>
    <string name="ok_weneed">Muy bien</string>
    <string name="we_need">Parece que tu email no ha sido registrado necesitamos que completes los datos, para proceder \nGracias!</string>
    <string name="price_example">$4000</string>
    <string name="empty_fam">No hay productos disponibles</string>
    <string name="pedidos_str">MIS PEDIDOS</string>
    <string name="pending_order">Pendiente</string>
    <string name="history_order">Historial</string>
    <string name="empty_orders">No hay ordenes</string>
    <string name="date_example">10/10/2019 20:38:00</string>
    <string name="quantity_example">0</string>
    <string name="watch_order">Ver carrito</string>
    <string name="delete_sh">Eliminar</string>
    <string name="select_payment_method">Seleccionar metodo de pago</string>
    <string name="to_home">Le cancelo contra entrega</string>
    <string name="to_market">Ya cancele en el local</string>
    <string name="select_dir">Selecciona dirección de entrega</string>
    <string name="shopnow">Pagar ahora</string>
    <string name="empty_info">Falta información</string>
    <string name="info1_direction">Número</string>
    <string name="info2_direction">Complemento</string>
    <string name="info3_direction">Punto de referencia</string>
    <string name="info4_direction">Entregar en</string>
    <string name="home_option">Casa</string>
    <string name="work_option">Trabajo</string>
    <string name="save_dir">Guardar Dirección</string>
    <string name="cash_option">Efectivo</string>
    <string name="credit_option">Sinpe Móvil</string>
    <string name="loginlike">Iniciar como repartidor</string>
    <string name="detail_orders">Detalles de ordenes</string>
    <string name="orders_ttl">Ordenes</string>
    <string name="user_example">Diego García</string>
    <string name="user_rating_example">4/5 stars</string>
    <string name="user_time_example">3 meses</string>
    <string name="delivery_tittl">Inicia como Repartidor</string>
    <string name="pay_button">Pagar</string>
    <string name="paynow_title">Confirme su compra</string>
    <string name="payselect">Metodo de pago</string>
    <string name="direction_ttl">Entrega en:</string>
    <string name="totaltopay">Total a pagar:</string>
    <string name="prodcc">Productos:</string>
    <string name="must_select_paymethod">Debes seleccionar metodo de pago</string>
    <string name="must_select_direction">Debes seleccionar una dirección correctamente</string>
    <string name="order_detail">Detalles del pedido</string>
    <string name="rating_tittl">Califica a</string>
    <string name="only_one_business">Solo puedes comprar productos de un negocio a la vez</string>
    <string name="more_info">Mas información</string>
    <string name="payment_method">Metodo de pago</string>
    <string name="date_ttl">Fecha:</string>
    <string name="order_number">Num Orden</string>
    <string name="delivery_info">Información de repartidor</string>
    <string name="name_delivery">Nombre:</string>
    <string name="rate_ttl">Calificar</string>
    <string name="back_tohome">Volver a inicio</string>
    <string name="ok_pay">Pedido hecho!</string>
    <string name="rating_amabili">Amabilidad</string>
    <string name="rating_service">Servicio</string>
    <string name="rating_present">Presentación</string>
    <string name="rating_sauce">Sabor</string>
    <string name="rating_presentc">Presentación negocio</string>
    <string name="login_error">Parece que algo está mal</string>
    <string name="rated">Calificaste a</string>
    <string name="rated_already">Calificado</string>
    <string name="change_data">Actualizar mis datos</string>
    <string name="change_name">Cambiar nombre</string>
    <string name="change_number">Cambiar numero de celular</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="update_btn">Actualizar</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="ok_update">Actualizado!</string>
    <string name="check_pending">Pendiente</string>
    <string name="check_preparing">Preparando</string>
    <string name="check_onroad">En camino</string>
    <string name="check_delivered">Entregado</string>
    <string name="check_done">Terminado</string>
    <string name="status_order">Estado de la orden</string>
    <string name="goto_status">Pasar a</string>
    <string name="confirm_now">Confirmar</string>
    <string name="pay_form">Forma de pago</string>
</resources>
