<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/white_corners"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/roundeddrabw"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_data"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:maxLines="1"
            android:id="@+id/ttlks"
            android:textSize="20sp"

            android:textColor="@color/white"
            />
    </RelativeLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:hint="@string/change_name"
        android:textStyle="normal"
        android:layout_margin="10dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="3"
        android:id="@+id/name_textview"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:layout_margin="10dp"
        android:id="@+id/change_number"
        android:hint="@string/change_number"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="5dp"
        android:background="@color/shadowPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/change_password"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:id="@+id/change_password"
            android:textSize="16sp"
            android:textStyle="normal"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/confirm_password"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:id="@+id/change_password_confirm"
            android:textSize="16sp"
            android:textStyle="normal"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/back_midle"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/update_btn"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:maxLines="1"
            android:id="@+id/paynow"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            />

    </LinearLayout>

</LinearLayout>