<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/white_corners"
    android:padding="15dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_tittl"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/title_rate_dialog"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_amabili"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:max="5"
        android:id="@+id/rating_bar"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_service"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:max="5"
        android:id="@+id/rating_service"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_present"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:max="5"
        android:id="@+id/rating_present"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_tittl"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/title_rate_buss"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_sauce"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:max="5"
        android:id="@+id/rating_sauce"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/rating_presentc"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:max="5"
        android:id="@+id/rating_presentc"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_btn"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:layout_toStartOf="@id/rate_btn"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rate_btn"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            android:textAlignment="center"
            android:text="@string/rate_ttl"
            android:layout_alignParentEnd="true"
            android:background="@drawable/back_midle"
            android:padding="15dp"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>



</LinearLayout>