<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="horizontal"
    android:padding="5dp"
    app:cardBackgroundColor="@color/primaryTextColor"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_bussi"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            app:srcCompat="@drawable/placeholder_img" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_bussi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/title_bus_example"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_bussin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:gravity="start"
                android:maxLines="4"
                android:text="@string/desc_buss"
                android:textColor="@color/obscure"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dire_bussi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/dir_bussines"
                android:textColor="@color/obscure"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_bussi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/rating_example"
                android:textColor="@color/obscure"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:tint="@color/primaryColor"
                app:srcCompat="@drawable/maps" />


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>