<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/white_corners"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/select_payment_method"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:id="@+id/effective"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/cash_ic"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/cash_option"
            android:layout_marginStart="15dp"
            android:textColor="@color/obscure"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="normal"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/snipe_movil"
        android:layout_margin="15dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/debit_card"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/credit_option"
            android:layout_marginStart="15dp"
            android:textColor="@color/obscure"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="normal"
            />

    </LinearLayout>


</LinearLayout>