<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ShopingFragment">

  <RelativeLayout
      android:layout_width="match_parent"

      android:layout_height="match_parent">

      <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"

          android:background="@color/white"
          android:layout_above="@id/pay_now"
          android:layout_height="match_parent">



      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:layout_height="wrap_content">

          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@drawable/bg"
              android:layout_height="320dp">


              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="4dp"
                  android:textColor="@color/primaryTextColor"
                  android:textAlignment="center"
                  android:layout_gravity="center_horizontal"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:text="@string/shopping_cart"
                  />


          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_marginTop="5dp"
              android:layout_height="280dp">
              <androidx.recyclerview.widget.RecyclerView
                  android:layout_width="match_parent"
                  android:id="@+id/list_items"
                  android:visibility="gone"
                  android:layout_height="match_parent">

              </androidx.recyclerview.widget.RecyclerView>

              <TextView
                  android:id="@+id/empty_fam"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:text="@string/empty_fam"
                  android:textAlignment="center"
                  android:textColor="@color/primaryTextColor"
                  android:textSize="20sp" />

          </RelativeLayout>

          </LinearLayout>



      <LinearLayout
          android:id="@+id/select_payment_method"
          android:layout_width="match_parent"
          android:orientation="horizontal"
          android:padding="5dp"
          android:layout_marginTop="10dp"
          android:layout_height="wrap_content">

          <TextView
              android:layout_width="0dp"
              android:layout_weight="1"
 android:textStyle="normal"
              android:textSize="18sp"
              android:textColor="@color/obscure"
              android:text="@string/select_payment_method"
              android:id="@+id/paywhat"
              android:layout_height="wrap_content" />

          <ImageView
              android:layout_width="30dp"
              android:layout_height="30dp"
              app:srcCompat="@drawable/ic_action_back_arrow"
              android:tint="@color/obscure"
              android:rotation="180"
              />

      </LinearLayout>

          <View
              android:layout_marginTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:padding="5dp"
              android:background="@color/obscure"
              />


          <RadioGroup
              android:layout_width="match_parent"
              android:layout_height="90dp"
              android:layout_gravity="center_horizontal"
              android:gravity="center_vertical"
              android:padding="5dp"
              android:layout_margin="15dp"
              android:orientation="horizontal"
              android:id="@+id/radioGroup">


                  <RadioButton
                      android:id="@+id/radioButton1"
                      android:layout_width="100dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:textSize="16sp"
                      android:layout_margin="5dp"
                      android:checked="true"
                      android:gravity="center"
                      android:padding="10dp"
                      android:background="@drawable/radio_drawable"
                      android:button="@android:color/transparent"
                      android:textColor="@color/black"
                      android:text="@string/to_home" />

                  <RadioButton
                      android:id="@+id/radioButton2"
                      android:layout_width="100dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:padding="10dp"
                      android:textColor="@color/black"
                      android:background="@drawable/radio_drawable"
                      android:button="@android:color/transparent"
                      android:textSize="16sp"
                      android:gravity="center"
                      android:layout_margin="5dp"
                      android:text="@string/to_market" />





          </RadioGroup>

          <LinearLayout
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:id="@+id/select_direction"
              android:layout_marginTop="8dp"
              android:padding="5dp"
              android:layout_height="wrap_content">
              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textStyle="normal"
                  android:textSize="18sp"
                  android:id="@+id/full_directy"
                  android:textColor="@color/obscure"
                  android:text="@string/select_dir"
                  android:layout_height="wrap_content" />

              <ImageView
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:tint="@color/obscure"
                  app:srcCompat="@drawable/ic_action_back_arrow"
                  android:rotation="180"
                  />

          </LinearLayout>

          <View
              android:layout_marginTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/obscure"
              android:padding="5dp"
              />


      </LinearLayout>

      </androidx.core.widget.NestedScrollView>


      <RelativeLayout
          android:id="@+id/pay_now"
          android:layout_width="match_parent"
          android:layout_alignParentBottom="true"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:visibility="visible"
          android:background="@drawable/back_me"
          >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_margin="20dp"
              android:gravity="center"
              android:maxLines="1"
              android:text="@string/shopnow"
              android:textAlignment="center"
              android:textColor="@color/primaryTextColor"
              android:layout_centerInParent="true"
              android:textSize="20sp"
              android:textStyle="bold" />

      </RelativeLayout>
  </RelativeLayout>

</FrameLayout>